<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/description_info"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/background_translucent_employee"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_header_primary_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/login_header_primary_text"
                    android:textColor="@color/colorHeaderPrimaryText"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_header_secondary_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/login_header_secondary_text"
                    android:textColor="@color/colorHeaderSecondaryText" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/TextInputLayoutAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:text="user@gmail.com"
                    android:textColor="@color/White"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/White"
                android:theme="@style/TextInputLayoutAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:text="pass@123"
                    android:textColor="@color/White"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:theme="@style/TextInputLayoutAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_store_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/shop_id_hint"
                    android:inputType="text"
                    android:text="store1"
                    android:textColor="@color/White"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorButtonBackground"
                android:backgroundTint="@color/colorButtonHighlightBackground"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/login_button_text"
                android:textColor="@color/colorButtonText"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/iv_logo_text"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_text_white"
        android:contentDescription="TODO" />

</android.support.constraint.ConstraintLayout>